[package]
name = "project2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.0.10",features=["derive"]}
fft2d = "0.1.0"
image = "0.23.0 "
imageproc = "0.22.0"
rustfft = "6.0.1"
rusttype = "0.9.2"

[features]
